<resources>
    <string name="app_name">PT1</string>
    <string name="user">User</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="repeat">Pasword (repeat)</string>
    <string name="gender">Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="help">HELP</string>
    <string name="create">CREATE</string>
    <string name="in">SIGN IN</string>
    <string name="up">SIGN UP</string>
    <string name="main">MAIN Activity</string>
    <string name="registrate">REGISTRE Activity</string>
</resources>
